# proxycraft

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  plans.example.json  pyproject.toml
.github/workflows/: deploy-landing.yml  deploy-webapp.yml  deploy.yml  geo-probes.yml
.wrangler/cache/: pages.json  wrangler-account.json
admin/: .env.example  index.html  package-lock.json  package.json
admin/src/: App.tsx  main.tsx
app/: __main__.py  config.py  logger.py
app/data/: operators.json  products.json  vpn_profiles.json
app/db/: database.py
docs/: mtproto-runtime-config.md  referral-system.md  spb-direct-reality-rollout.md
docs/decisions/: 001-whatsapp-proxy-self-contained-runtime.md  002-production-smoke-runner.md  003-persist-legal-consents-in-backend.md  003-smoke-fixture-registry.md  004-post-deploy-verification-and-alerting.md  005-external-geo-probes.md
infrastructure/amneziawg/: .env.example  .gitignore  docker-compose.yml  entrypoint.sh  setup.sh
infrastructure/github-runners/: .env.example  Dockerfile  deploy.sh  docker-compose.yml  entrypoint.sh
landing/: .gitignore  astro.config.mjs  deploy.sh  package-lock.json  package.json
mtproto/: Dockerfile  config.py  docker-entrypoint.sh
scripts/: migrate_sqlite_to_postgres.py  provision_smoke_fixtures.py  run_geo_probes.py  run_post_deploy_verification.py  run_smoke_checks.py  smoke_fixture_catalog.py
webapp/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts
whatsapp/: Dockerfile  docker-entrypoint.sh  haproxy.cfg  healthcheck.sh
(+173 files in other folders)
