[tool.poetry]
name = "proxycraft"
version = "0.2.1"
description = "Telegram bot for selling VPN & proxy subscriptions via 3X-UI."
authors = ["Roman Belov"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.15.0"
babel = "^2.16.0"
environs = "^11.2.1"
cachetools = "^5.5.0"
py3xui = "^0.3.2"
yookassa = "^3.4.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiosqlite = "^0.20.0"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
redis = "^5.2.1"
apscheduler = "^3.11.0"
segno = "^1.6.1"
httpx = ">=0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
